--- a/build.gradle
+++ b/build.gradle
@@ -17,9 +17,15 @@ buildscript {
 
 apply plugin: 'forge'
 
-version = "1.0"
-group= "com.yourname.modid" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "modid"
+allprojects {
+    apply plugin: 'java'
+    sourceCompatibility = 1.7
+    targetCompatibility = 1.7
+}
+
+version = "0.0.1"
+group= "cyano.basemetals"
+archivesBaseName = "basemetals"
 
 minecraft {
     version = "1.8-11.14.0.1273-1.8"
@@ -34,19 +40,10 @@ minecraft {
 }
 
 dependencies {
-    // you may put jars on which you depend on in ./libs
-    // or you may define them like so..
-    //compile "some.group:artifact:version:classifier"
-    //compile "some.group:artifact:version"
-      
-    // real examples
-    //compile 'com.mod-buildcraft:buildcraft:6.0.8:dev'  // adds buildcraft to the dev env
-    //compile 'com.googlecode.efficient-java-matrix-library:ejml:0.24' // adds ejml to the dev env
-
-    // for more info...
-    // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
-    // http://www.gradle.org/docs/current/userguide/dependency_management.html
-
+    compile files(
+        'lib/NEI/CodeChickenCore-1.8-1.0.5.34-dev.jar',
+        'lib/NEI/NotEnoughItems-1.8-1.0.5.84-dev.jar'
+    )
 }
 
 processResources
