updated to new recommended Forge build 1299 and incremented version number

--- a/build.gradle
+++ b/build.gradle
@@ -23,12 +23,12 @@ allprojects {
     targetCompatibility = 1.7
 }
 
-version = "1.0.3"
+version = "1.1.0"
 group= "cyano.basemetals"
 archivesBaseName = "basemetals"
 
 minecraft {
-    version = "1.8-11.14.0.1281-1.8"
+    version = "1.8-11.14.0.1299"
     runDir = "eclipse"
     
     // the mappings can be changed at any time, and must be in the following format.
