--- a/build.gradle
+++ b/build.gradle
@@ -23,9 +23,9 @@ allprojects {
     targetCompatibility = 1.7
 }
 
-version = "1.3.0"
+version = "1.3.1"
 group= "cyano.basemetals"
-archivesBaseName = "basemetals"
+archivesBaseName = "BaseMetals"
 
 minecraft {
     version = "1.8-11.14.1.1334"
