--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,24 @@
+/*
+// For those who want the bleeding edge
 buildscript {
     repositories {
-        mavenCentral()
+        jcenter()
         maven {
             name = "forge"
             url = "http://files.minecraftforge.net/maven"
         }
-        maven {
-            name = "sonatype"
-            url = "https://oss.sonatype.org/content/repositories/snapshots/"
-        }
     }
     dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:1.2-SNAPSHOT'
+        classpath 'net.minecraftforge.gradle:ForgeGradle:2.0-SNAPSHOT'
     }
 }
+apply plugin: 'net.minecraftforge.gradle.forge'
+*/
 
-apply plugin: 'forge'
+// for people who want stable
+plugins {
+    id "net.minecraftforge.gradle.forge" version "2.0.1"
+}
 
 allprojects {
     apply plugin: 'java'
@@ -28,11 +31,16 @@ group= "cyano.basemetals"
 archivesBaseName = "BaseMetals"
 
 minecraft {
-    version = "1.8-11.14.3.1450"
-    runDir = "eclipse"
+    version = "1.8-11.14.3.1525"
+    runDir = "run"
     
-    
+    // the mappings can be changed at any time, and must be in the following format.
+    // snapshot_YYYYMMDD   snapshot are built nightly.
+    // stable_#            stables are built at the discretion of the MCP team.
+    // Use non-default mappings at your own risk. they may not allways work.
+    // simply re-run your setup task after changing the mappings to update your workspace.
     mappings = "snapshot_20141130"
+    // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
 }
 
 dependencies {
@@ -40,6 +48,7 @@ dependencies {
         'lib/NEI/CodeChickenCore-1.8-1.0.5.34-dev.jar',
         'lib/NEI/NotEnoughItems-1.8-1.0.5.84-dev.jar'
     )
+
 }
 
 processResources
