FLUID BLOCKS NOW WORKING!!! Added mercury fluid block and bucket

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 /README.txt
 /.classpath
-/forge-1.8-11.14.0.1269-1.8-changelog.txt
+/forge-*-changelog.txt
 /gradlew
 /gradlew.bat
 /bin/*
@@ -12,6 +12,7 @@
 *.index
 *~
 /temp/*
+/build/*
 temp/*
 /run/*
 
