--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,6 @@
-// For those who want the bleeding edge
+// Gradle build script
+
+// For those who want the bleeding edge:
 buildscript {
     repositories {
         jcenter()
@@ -13,12 +15,7 @@ buildscript {
 }
 apply plugin: 'net.minecraftforge.gradle.forge'
 
-/*
-// for people who want stable - not yet functional for MC 1.8.8 - we require the forgegradle 2.1 snapshot
-plugins {
-    id "net.minecraftforge.gradle.forge" version "2.0.2"
-}
-*/
+
 
 allprojects {
     apply plugin: 'java'
@@ -26,12 +23,20 @@ allprojects {
     targetCompatibility = 1.8
 }
 
-version = "1.7.4"
+/*
+// for people who want stable 
+plugins {
+    id "net.minecraftforge.gradle.forge" version "2.0.2"
+}
+*/
+
+
+version = "2.0.0"
 group= "cyano.basemetals"
-archivesBaseName = "BaseMetals"
+archivesBaseName = "BaseMetals-1.9-"
 
 minecraft {
-    version = "1.9-12.16.0.1766-1.9"
+    version = "1.9-12.16.0.1770-1.9"
     runDir = "run"
     
     // the mappings can be changed at any time, and must be in the following format.
@@ -40,7 +45,6 @@ minecraft {
     // Use non-default mappings at your own risk. they may not allways work.
     // simply re-run your setup task after changing the mappings to update your workspace.
     mappings = "snapshot_20160312"
-    // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
 }
 
 dependencies {
@@ -70,4 +74,10 @@ processResources
     from(sourceSets.main.resources.srcDirs) {
         exclude 'mcmod.info'
     }
+}
+
+idea { 
+	module { 
+		inheritOutputDirs = true 
+	} 
 }
