--- a/extras/additional loot tables/basemetals/end_city_treasure.json
+++ b/extras/additional loot tables/basemetals/end_city_treasure.json
@@ -6,7 +6,7 @@
             "entries": [
                 {
                     "type": "empty",
-                    "weight": 540,
+                    "weight": 540
                 },
 				{
                     "type": "item",
@@ -495,103 +495,183 @@
 				{
                     "type": "item",
                     "name": "basemetals:adamantine_axe",
-                    "weight": 3,
+                    "weight": 3
                 },
 				{
                     "type": "item",
                     "name": "basemetals:adamantine_boots",
-                    "weight": 3,
+                    "weight": 3
                 },
 				{
                     "type": "item",
                     "name": "basemetals:adamantine_chestplate",
-                    "weight": 3,
+                    "weight": 3
                 },
 				{
                     "type": "item",
                     "name": "basemetals:adamantine_helmet",
-                    "weight": 3,
+                    "weight": 3
                 },
 				{
                     "type": "item",
                     "name": "basemetals:adamantine_hoe",
-                    "weight": 3,
+                    "weight": 3
                 },
 				{
                     "type": "item",
                     "name": "basemetals:adamantine_leggings",
-                    "weight": 3,
+                    "weight": 3
                 },
 				{
                     "type": "item",
                     "name": "basemetals:adamantine_pickaxe",
-                    "weight": 3,
+                    "weight": 3
                 },
 				{
                     "type": "item",
                     "name": "basemetals:adamantine_shovel",
-                    "weight": 3,
+                    "weight": 3
                 },
 				{
                     "type": "item",
                     "name": "basemetals:adamantine_sword",
-                    "weight": 3,
+                    "weight": 3
                 },
 				{
                     "type": "item",
                     "name": "basemetals:adamantine_crackhammer",
-                    "weight": 3,
+                    "weight": 3
                 },
 				
 				{
                     "type": "item",
                     "name": "basemetals:starsteel_axe",
-                    "weight": 3,
+                    "weight": 3
                 },
 				{
                     "type": "item",
                     "name": "basemetals:starsteel_boots",
-                    "weight": 3,
+                    "weight": 3
                 },
 				{
                     "type": "item",
                     "name": "basemetals:starsteel_chestplate",
-                    "weight": 3,
+                    "weight": 3
                 },
 				{
                     "type": "item",
                     "name": "basemetals:starsteel_helmet",
-                    "weight": 3,
+                    "weight": 3
                 },
 				{
                     "type": "item",
                     "name": "basemetals:starsteel_hoe",
-                    "weight": 3,
+                    "weight": 3
                 },
 				{
                     "type": "item",
                     "name": "basemetals:starsteel_leggings",
-                    "weight": 3,
+                    "weight": 3
                 },
 				{
                     "type": "item",
                     "name": "basemetals:starsteel_pickaxe",
-                    "weight": 3,
+                    "weight": 3
                 },
 				{
                     "type": "item",
                     "name": "basemetals:starsteel_shovel",
-                    "weight": 3,
+                    "weight": 3
                 },
 				{
                     "type": "item",
                     "name": "basemetals:starsteel_sword",
-                    "weight": 3,
+                    "weight": 3
                 },
 				{
                     "type": "item",
                     "name": "basemetals:starsteel_crackhammer",
-                    "weight": 3,
+                    "weight": 3
+                }
+            ]
+        },
+		{
+			"__comment":"25% chance of rare metal ingots",
+            "rolls": 1,
+            "entries": [
+                {
+                    "type": "empty",
+                    "weight": 300
+                },
+				{
+                    "type": "item",
+                    "name": "basemetals:coldiron_ingot",
+                    "weight": 40,
+                    "functions": [
+                        {
+                            "function": "set_count",
+                            "count": {
+                                "min": 1,
+                                "max": 4
+                            }
+                        }
+                    ]
+                },
+				{
+                    "type": "item",
+                    "name": "basemetals:aquarium_ingot",
+                    "weight": 25,
+                    "functions": [
+                        {
+                            "function": "set_count",
+                            "count": {
+                                "min": 1,
+                                "max": 4
+                            }
+                        }
+                    ]
+                },
+				{
+                    "type": "item",
+                    "name": "basemetals:mithril_ingot",
+                    "weight": 20,
+                    "functions": [
+                        {
+                            "function": "set_count",
+                            "count": {
+                                "min": 1,
+                                "max": 4
+                            }
+                        }
+                    ]
+                },
+				{
+                    "type": "item",
+                    "name": "basemetals:adamantine_ingot",
+                    "weight": 10,
+                    "functions": [
+                        {
+                            "function": "set_count",
+                            "count": {
+                                "min": 1,
+                                "max": 4
+                            }
+                        }
+                    ]
+                },
+				{
+                    "type": "item",
+                    "name": "basemetals:starsteel_ingot",
+                    "weight": 5,
+                    "functions": [
+                        {
+                            "function": "set_count",
+                            "count": {
+                                "min": 1,
+                                "max": 4
+                            }
+                        }
+                    ]
                 }
             ]
         }
