--- a/build.gradle
+++ b/build.gradle
@@ -33,12 +33,12 @@ plugins {
 
 version = "2.2.2.1"
 group= "cyano.basemetals"
-archivesBaseName = "BaseMetals_1.9"
+archivesBaseName = "BaseMetals_1.9.4"
 
 minecraft {
-    version = "1.9-12.16.1.1907"
+    version = "1.9.4-12.17.0.1921-1.9.4"
     runDir = "run"
-    mappings = "stable_24"
+    mappings = "snapshot_20160525"
 }
 
 dependencies {
