--- a/build.gradle
+++ b/build.gradle
@@ -29,14 +29,14 @@ plugins {
 */
 
 
-version = "2.3.3.10"
+version = "2.4.0.11"
 group= "cyano.basemetals"
-archivesBaseName = "BaseMetals_1.9.4"
+archivesBaseName = "BaseMetals_1.10.2"
 
 minecraft {
-	version = "1.9.4-12.17.0.1922-1.9.4"
+    version = "1.10.2-12.18.1.2011"
 	runDir = "run"
-	mappings = "snapshot_20160518"
+    mappings = "snapshot_20160518"
 }
 
 dependencies {
